Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2765

Memory Leak in SSLConfig initialization

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 5.0.0
    • Core

    Description

      While debugging memory leak during SPDY testing on a production host noticed a couple of leaks (13 bytes each) during SSL Config initialization. Below is the valgrind output showing the leak. These bugs also exist in 4.0.

      ==29790== Thread 1:
      ==29790== 13 bytes in 1 blocks are definitely lost in loss record 168 of 2,653
      ==29790==    at 0x4C279EE: malloc (vg_replace_malloc.c:270)
      ==29790==    by 0x4E50E3D: ats_malloc (ink_memory.cc:50)
      ==29790==    by 0x4E50E9D: _xstrdup (ink_memory.cc:236)
      ==29790==    by 0x70E90B: RecDataSet(RecDataT, RecData*, RecData*) (RecUtils.cc:148)
      ==29790==    by 0x70729C: RecGetRecord_Xmalloc(char const*, RecDataT, RecData*, bool) (RecCore.cc:780)
      ==29790==    by 0x707327: RecGetRecordString_Xmalloc(char const*, char**, bool) (RecCore.cc:382)
      ==29790==    by 0x6DAF2C: SSLConfigParams::initialize() (SSLConfig.cc:214)
      ==29790==    by 0x6DB5AD: SSLConfig::startup() (SSLConfig.cc:265)
      ==29790==    by 0x6DBB29: SSLNetProcessor::start(int, unsigned long) (SSLNetProcessor.cc:51)
      ==29790==    by 0x4D0723: main (Main.cc:1557)
      ==29790== 
      ==29790== 13 bytes in 1 blocks are definitely lost in loss record 169 of 2,653
      ==29790==    at 0x4C279EE: malloc (vg_replace_malloc.c:270)
      ==29790==    by 0x4E50E3D: ats_malloc (ink_memory.cc:50)
      ==29790==    by 0x4E50E9D: _xstrdup (ink_memory.cc:236)
      ==29790==    by 0x70E90B: RecDataSet(RecDataT, RecData*, RecData*) (RecUtils.cc:148)
      ==29790==    by 0x70729C: RecGetRecord_Xmalloc(char const*, RecDataT, RecData*, bool) (RecCore.cc:780)
      ==29790==    by 0x707327: RecGetRecordString_Xmalloc(char const*, char**, bool) (RecCore.cc:382)
      ==29790==    by 0x6DB0E2: SSLConfigParams::initialize() (SSLConfig.cc:246)
      ==29790==    by 0x6DB5AD: SSLConfig::startup() (SSLConfig.cc:265)
      ==29790==    by 0x6DBB29: SSLNetProcessor::start(int, unsigned long) (SSLNetProcessor.cc:51)
      ==29790==    by 0x4D0723: main (Main.cc:1557)
      

      Attachments

        1. ts2765.diff
          2 kB
          Sudheer Vinukonda

        Activity

          People

            bcall Bryan Call
            sudheerv Sudheer Vinukonda
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: