TS-2765: Memory Leak in SSLConfig initialization